<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:id="@+id/contenedorFragment">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/card_velocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/txt_tu_velocidad"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_tu_velocidad"
                android:textColor="@color/letra_menu"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="4dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/velocidad_actual"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/vacio"
                android:textAlignment="center"
                android:textColor="#ffcc00"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_kmh"
                android:textAlignment="center"
                android:textColor="#ffcc00"
                android:textSize="34sp"
                android:textStyle="bold"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                android:layout_weight="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <fragment
        android:layout_below="@+id/card_velocidad"
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />






</RelativeLayout>