<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".menuFragment.InicioMenu">

<androidx.gridlayout.widget.GridLayout
    android:id="@+id/idGridMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="5dp"
    app:columnCount="1"
    app:rowCount="6">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_velocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/txt_tu_velocidad"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_tu_velocidad"
                android:textColor="@color/letra_menu"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="4dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/velocidad_actual"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/vacio"
                android:textAlignment="center"
                android:textColor="#ffcc00"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_kmh"
                android:textAlignment="center"
                android:textColor="#ffcc00"
                android:textSize="34sp"
                android:textStyle="bold"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txt_latitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacio"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txt_longitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacio"
                android:visibility="gone"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/card_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/txt_mapa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_mapa"
                android:textColor="#ffcc00"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                />
            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_mapa"
                android:src="@drawable/gps"
                android:gravity="center"
                android:contentDescription="@string/txt_mapa"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_reporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_reporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            >

            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/reporte"
                android:src="@drawable/reporte"
                android:contentDescription="@string/txt_rep_conductor"/>

            <TextView
                android:id="@+id/txt_reporte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_rep_conductor"
                android:textColor="#ffcc00"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_excesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_excesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_excesos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_excesos"
                android:gravity="center"
                android:textColor="#ffcc00"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_check"
                android:src="@drawable/check"
                android:contentDescription="@string/txt_excesos"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_qr"
                android:src="@drawable/qr"
                android:contentDescription="@string/txt_qr"/>

            <TextView
                android:id="@+id/txt_qr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_qr"
                android:gravity="center"
                android:textColor="#ffcc00"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_info"
                android:gravity="center"
                android:textColor="#ffcc00"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_info"
                android:src="@drawable/check"
                android:contentDescription="@string/txt_excesos"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/card_panico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_panico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_panico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_panico"
                android:textColor="#ffcc00"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/asd"
                android:src="@drawable/check" />



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.gridlayout.widget.GridLayout>

</ScrollView>